intel/bench_214_new/extr_.openpilotselfdrivecontrolsliblongitudinal_mpclib_mpc_exportacado_solver.c_acado_setObjQ1Q2_with_main/log.txt
bench_214_new/extr_.openpilotselfdrivecontrolsliblongitudinal_mpclib_mpc_exportacado_solver.c_acado_setObjQ1Q2_with_main/extr_.openpilotselfdrivecontrolsliblongitudinal_mpclib_mpc_exportacado_solver.c_acado_setObjQ1Q2_with_main.c:42:17: error: default initialization of an object of const type 'real_t *const' (aka 'int *const')
  real_t *const tmpFx;
                ^
                      = nullptr
bench_214_new/extr_.openpilotselfdrivecontrolsliblongitudinal_mpclib_mpc_exportacado_solver.c_acado_setObjQ1Q2_with_main/extr_.openpilotselfdrivecontrolsliblongitudinal_mpclib_mpc_exportacado_solver.c_acado_setObjQ1Q2_with_main.c:43:17: error: default initialization of an object of const type 'real_t *const' (aka 'int *const')
  real_t *const tmpObjS;
                ^
                        = nullptr
bench_214_new/extr_.openpilotselfdrivecontrolsliblongitudinal_mpclib_mpc_exportacado_solver.c_acado_setObjQ1Q2_with_main/extr_.openpilotselfdrivecontrolsliblongitudinal_mpclib_mpc_exportacado_solver.c_acado_setObjQ1Q2_with_main.c:44:17: error: default initialization of an object of const type 'real_t *const' (aka 'int *const')
  real_t *const tmpQ1;
                ^
                      = nullptr
bench_214_new/extr_.openpilotselfdrivecontrolsliblongitudinal_mpclib_mpc_exportacado_solver.c_acado_setObjQ1Q2_with_main/extr_.openpilotselfdrivecontrolsliblongitudinal_mpclib_mpc_exportacado_solver.c_acado_setObjQ1Q2_with_main.c:45:17: error: default initialization of an object of const type 'real_t *const' (aka 'int *const')
  real_t *const tmpQ2;
                ^
                      = nullptr
4 errors generated.
HLS FPGA Parse FAILED.
